--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -4,3 +4,8 @@
   ---
 ### Page22
   * aptitude "天资, 天赋"
+  * linguistics "语言学"
+  * We know, for example, that
+we can play games with people whose linguistics aren’t ours, whose culture we
+don’t share, and whom we have never met before. It is even clear that we can play
+games with creatures that don’t even belong to our species! 
