--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -9,3 +9,6 @@
 we can play games with people whose linguistics aren’t ours, whose culture we
 don’t share, and whom we have never met before. It is even clear that we can play
 games with creatures that don’t even belong to our species! 
+---
+### Page23
+  * > in other words, with games, learning is the drug. Raph Koster
