--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -1,3 +1,7 @@
+---
+## Format
+ *
+---
 ### Page21
   * "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
   * 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
@@ -12,3 +16,11 @@ games with creatures that don’t even belong to our species!
 ---
 ### Page23
   * > in other words, with games, learning is the drug. Raph Koster
+---
+### Page24
+ * potential "潜在的,可能的"
+ * identity "证明/证据/徽章"
+ * subgenre "更近一步, 下一部"
+---
+### Page
+ *
