--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -26,4 +26,7 @@ games with creatures that don’t even belong to our species!
 * rephrasing "换个说法"
 * proficiency "熟练,精通"
 * > good level design teaches the player how to play and enjoy the game.
-* > * the physical rules of the environment. * the abilities of the player's in game character. * the behavior of enemies* the game's reward systems
+* > * the physical rules of the environment. 
+* > * the abilities of the player's in game character. 
+* > * the behavior of enemies
+* > * the game's reward systems
