--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -1,28 +1,18 @@
-### Page21
+## Level Design
 * "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
 * 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
----
-### Page22
 * aptitude "天资, 天赋"
 * linguistics "语言学"
 * > We know, for example, that
 we can play games with people whose linguistics aren’t ours, whose culture we
 don’t share, and whom we have never met before. It is even clear that we can play
 games with creatures that don’t even belong to our species! 
----
-### Page23
 * > in other words, with games, learning is the drug. Raph Koster
----
-### Page24
 * potential "潜在的,可能的"
 * identity "证明/证据/徽章"
 * subgenre "更近一步, 下一部"
----
-### Page25
 * medchanism "装置, 方法"
 * vital "必不可少的"
----
-### page26
 * rephrasing "换个说法"
 * proficiency "熟练,精通"
 * > good level design teaches the player how to play and enjoy the game.
@@ -30,3 +20,4 @@ games with creatures that don’t even belong to our species!
 > * the abilities of the player's in game character. 
 > * the behavior of enemies
 > * the game's reward systems
+* 好的关卡设计应该引导玩家学习游戏操作方式,并提供适度的空间给与玩家自由发挥,并获得快乐.
