--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -21,3 +21,4 @@ games with creatures that don’t even belong to our species!
 > * the behavior of enemies
 > * the game's reward systems
 * 好的关卡设计应该引导玩家学习游戏操作方式,并提供适度的空间给与玩家自由发挥,并获得快乐.
+* > what actions and skills does the player have to master in order to get rewarded by the game? where are the most enjoy sections to be found, which weapons provide the best results, what creatures are most fun to play with, and which skills should the player train first? all these questions present a teaching dialogue between level designer and player
