--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -1,4 +1,4 @@
-## Level Design
+## Level Design ##
 * "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
 * 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
 * aptitude "天资, 天赋"
@@ -24,3 +24,7 @@ games with creatures that don’t even belong to our species!
 * > what actions and skills does the player have to master in order to get rewarded by the game? where are the most enjoy sections to be found, which weapons provide the best results, what creatures are most fun to play with, and which skills should the player train first? all these questions present a teaching dialogue between level designer and player
 * inappropriate "不合适, 不恰当的"
 * sake "理由 , 缘故"
+* avatar "化身"
+* > 游戏的主要目标和主要规则应尽早的让玩家熟悉和了解.
+* strageies "策略, 计划,规划"
+* > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
