--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -1,6 +1,6 @@
 ## Level Design ##
-* "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
-* 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
+* > "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
+* > 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
 * aptitude "天资, 天赋"
 * linguistics "语言学"
 * > We know, for example, that
