--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -28,3 +28,4 @@ games with creatures that don’t even belong to our species!
 * > 游戏的主要目标和主要规则应尽早的让玩家熟悉和了解.
 * strageies "策略, 计划,规划"
 * > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
+* > 以斗争求和平则和平存, 以妥协求和平则和平亡.
