--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -29,3 +29,6 @@ games with creatures that don’t even belong to our species!
 * strageies "策略, 计划,规划"
 * > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
 * > 以斗争求和平则和平存, 以妥协求和平则和平亡.
+* >> 通过实例来进行教学,并保证玩家在尝试熟悉及掌握技能的时候不会碰到迷惑或者失败,一旦玩家掌握了这些技能,后续的练习可以考虑forgiving
+* Positive reinforcement "正向引导巩固 强化,奖励"
+* > 将玩家同游戏中的对手或者敌对势力放置在同等公平的地位上
