--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -3,10 +3,10 @@
 * > 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
 * aptitude "天资, 天赋"
 * linguistics "语言学"
-* > **We know, for example, that
+* > _We know, for example, that
 we can play games with people whose linguistics aren’t ours, whose culture we
 don’t share, and whom we have never met before. It is even clear that we can play
-games with creatures that don’t even belong to our species! 
+games with creatures that don’t even belong to our species!_ 
 * > in other words, with games, learning is the drug. Raph Koster
 * potential "潜在的,可能的"
 * identity "证明/证据/徽章"
@@ -29,7 +29,7 @@ games with creatures that don’t even belong to our species!
 * strageies "策略, 计划,规划"
 * > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
 * > 以斗争求和平则和平存, 以妥协求和平则和平亡.
-* >> **通过实例来进行教学,并保证玩家在尝试熟悉及掌握技能的时候不会碰到迷惑或者失败,一旦玩家掌握了这些技能,后续的练习可以考虑forgiving
+* >> _通过实例来进行教学,并保证玩家在尝试熟悉及掌握技能的时候不会碰到迷惑或者失败,一旦玩家掌握了这些技能,后续的练习可以考虑forgiving_
 * Positive reinforcement "正向引导巩固 强化,奖励"
-* > 将玩家同游戏中的对手或者敌对势力放置在同等公平的地位上
-* > **惩罚机制与奖励机制同等重要
+* > _将玩家同游戏中的对手或者敌对势力放置在同等公平的地位上_
+* > _惩罚机制与奖励机制同等重要_
