--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -28,7 +28,7 @@ games with creatures that don’t even belong to our species!_
 > * the abilities of the player's in game character. 
 > * the behavior of enemies
 > * the game's reward systems
-* 好的关卡设计应该引导玩家学习游戏操作方式,并提供适度的空间给与玩家自由发挥,并获得快乐.
+* > 好的关卡设计应该引导玩家学习游戏操作方式,并提供适度的空间给与玩家自由发挥,并获得快乐.
 * > what actions and skills does the player have to master in order to get rewarded by the game? where are the most enjoy sections to be found, which weapons provide the best results, what creatures are most fun to play with, and which skills should the player train first? all these questions present a teaching dialogue between level designer and player
 * > 游戏的主要目标和主要规则应尽早的让玩家熟悉和了解.
 * > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
