--- a/9781439876954_LevelDesign.md
+++ b/9781439876954_LevelDesign.md
@@ -14,7 +14,9 @@
 * avatar "化身"
 * strageies "策略, 计划,规划"
 * mandatory "强制的,义务的"
-* Positive reinforcement "正向引导巩固 强化,奖励"
+* positive reinforcement "正向引导巩固 强化,奖励"
+* genre "类型"
+* overt covert "公开的/秘密的"
 ---
 * > "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
 * > 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
@@ -34,6 +36,6 @@ games with creatures that don’t even belong to our species!_
 * > 一个好的游戏进程安排应该循序渐进,让玩家阶梯式的掌握游戏所需技能
 * > 以斗争求和平则和平存, 以妥协求和平则和平亡.
 * > _通过实例来进行教学,并保证玩家在尝试熟悉及掌握技能的时候不会碰到迷惑或者失败,一旦玩家掌握了这些技能,后续的练习可以考虑forgiving_
-* > _将玩家同游戏中的对手或者敌对势力放置在同等公平的地位上_
+* > _将玩家同游戏中的NPC或者敌对势力放置在同等公平的地位上_
 * > _惩罚机制与奖励机制同等重要_
 * > 最快乐的学习方式是去做,在边做的过程当中去学习,并在初始学习中最低标准的要求玩家掌握能够应对游戏世界的基本技能
