--- a/GameArtDesign/9781439876954_LevelDesign.md
+++ b/GameArtDesign/9781439876954_LevelDesign.md
@@ -24,12 +24,7 @@
 we can play games with people whose linguistics aren’t ours, whose culture we
 don’t share, and whom we have never met before. It is even clear that we can play
 games with creatures that don’t even belong to our species!_ 
-* > in other words, with games, learning is the drug. Raph Koster
-* > good level design teaches the player how to play and enjoy the game.
-> * the physical rules of the environment. 
-> * the abilities of the player's in game character. 
-> * the behavior of enemies
-> * the game's reward systems
+* >  * in other words, with games, learning is the drug. Raph Koster * good level design teaches the player how to play and enjoy the game. * the physical rules of the environment.  * the abilities of the player's in game character.  * the behavior of enemies * the game's reward systems
 * > 好的关卡设计应该引导玩家学习游戏操作方式,并提供适度的空间给与玩家自由发挥,并获得快乐.
 * > what actions and skills does the player have to master in order to get rewarded by the game? where are the most enjoy sections to be found, which weapons provide the best results, what creatures are most fun to play with, and which skills should the player train first? all these questions present a teaching dialogue between level designer and player
 * > 游戏的主要目标和主要规则应尽早的让玩家熟悉和了解.
