--- a/GameArtDesign/9781439876954_LevelDesign.md
+++ b/GameArtDesign/9781439876954_LevelDesign.md
@@ -17,6 +17,7 @@
 * positive reinforcement "正向引导巩固 强化,奖励"
 * genre "类型"
 * overt covert "公开的/秘密的"
+* hypothetical "超现实,超想象的"
 ---
 * > "认为游戏是一种动物与生俱来的天性,是从千万年的动物狩猎生存活动繁衍而来,与其说是游戏,不如说是为生存而练习"
 * > 我们的大脑可以接受较动物更为复杂的游戏及游戏规则
