--- a/GameArtDesign/9781439876954_LevelDesign.md
+++ b/GameArtDesign/9781439876954_LevelDesign.md
@@ -39,3 +39,4 @@ games with creatures that don’t even belong to our species!_
 * > _将玩家同游戏中的NPC或者敌对势力放置在同等公平的地位上_
 * > _惩罚机制与奖励机制同等重要_
 * > 最快乐的学习方式是去做,在边做的过程当中去学习,并在初始学习中最低标准的要求玩家掌握能够应对游戏世界的基本技能
+* ___真菌世界____
