--- a/GameArtDesign/9781439876954_LevelDesign.md
+++ b/GameArtDesign/9781439876954_LevelDesign.md
@@ -42,4 +42,4 @@ games with creatures that don’t even belong to our species!_
 * > _惩罚机制与奖励机制同等重要_
 * > 最快乐的学习方式是去做,在边做的过程当中去学习,并在初始学习中最低标准的要求玩家掌握能够应对游戏世界的基本技能
 * ___真菌世界___
-
+* 大逃杀类型是否可以演变或者派生成古代斗兽场类型的death_match游戏,有按照龙珠中的天下武道会的形式,进行轮回决斗式,同时玩家也可以在台下进行观看,角色在参赛者和观看者之间切换.不管可以进行pvp还可以进行人与传说中的怪物进行决斗.
