--- a/GameArtDesign/9781439876954_LevelDesign.md
+++ b/GameArtDesign/9781439876954_LevelDesign.md
@@ -44,4 +44,5 @@ games with creatures that don’t even belong to our species!_
 * ___真菌世界___
 * 大逃杀类型是否可以演变或者派生成古代斗兽场类型的death_match游戏,有按照龙珠中的天下武道会的形式,进行轮回决斗式,同时玩家也可以在台下进行观看,角色在参赛者和观看者之间切换.不管可以进行pvp还可以进行人与传说中的怪物进行决斗.
 * > dungeons and dragons 龙与底下城类型游戏
-* how to tell our stories within our mdedium, and level design is by far the most effective way of expressing this knowledge.
+* > how to tell our stories within our mdedium, and level design is by far the most effective way of expressing this knowledge.
+* > David Freeman , Creating Emotions in Games, New Riders, Berkeley, CA, 2003, p. 328.
